--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -7,6 +7,5 @@ services:
       - "8081:8081"
     volumes:
       - D:/Organized:/downloads
-      - D:/GitHub/metube:/cookies
     environment:
-      - YTDL_OPTIONS={"cookiefile":"/cookies/cookies.txt"}
+      - YTDL_OPTIONS={"cookiefile":"/downloads/cookies.txt", "trim_file_name":25}
